[package]
name = "markov"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5.28"
postcard = { version = "1.1.1", features = ["alloc"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
sprs = { version = "0.11.3", features = ["serde"] }
utf8-chars = "3.0.5"
